[tool.poetry]
name = "brain-games"
version = "0.1.0"
description = ""
authors = ["ingamingcast <i.a.balyakin@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
welcome-user = "brain_games.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
